--- a/ManagerProject/ManagerTest.DAL/ManagerTest.DAL.csproj
+++ b/ManagerProject/ManagerTest.DAL/ManagerTest.DAL.csproj
@@ -43,8 +43,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Domain\Resourse.cs" />
+    <Compile Include="Domain\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\IRepository.cs" />
+    <Compile Include="Repositories\RepositoryUser.cs" />
     <Compile Include="Repositories\RepositoryResourse.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
